2008-12-13  Klaus Dittrich  <kladit@arcor.de>

	* login/utmp_file.c (pututline_file): Replace call to dup2 with
	libc internal symbol __dup2 to avoid access through the PLT.

2008-12-08  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6545]
	* sysdeps/unix/sysv/linux/bits/socket.h (SCM_CREDENTIALS): Make
	available only for __USE_GNU.

	* inet/Makefile (tests): Add tst-getni2.
	* inet/tst-getni2.c: New file.

	[BZ #7080]
	* inet/getnameinfo.c (getnameinfo): Check for output buffers being
	NULL when NI_NAMEREQD is set.
	Patch mostly by Yang Hongyang <yanghy@cn.fujitsu.com>.
	* inet/Makefile (tests): Add tst-getni1.
	* inet/tst-getni1.c: New file.

2008-12-03  Petr Baudis  <pasky@suse.cz>

	[BZ #7067]
	* nscd/connections.c (invalidate_cache): Use prune_run_lock
	instead of prune_lock.
	(nscd_run_prune): Before calling prune_cache, take prune_run_lock.
	* nscd/nscd.h (database_dyn): Add prune_run_cache.

2008-12-07  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_send.c (send_dg): Use correct guards for SOCK_CLOEXEC
	use.

	* sysdeps/unix/sysv/linux/kernel-features.h: Fix typo in accept4
	handling.

	* resolv/res_init.c (__res_vinit): Always assign to statp->nscount
	after reading name server list.

	[BZ #7058]
	* nis/nss_nis/nis-hosts.c (_nss_nis_gethostbyname4_r): Fix memory
	handling for host name aliases.

2008-11-24  Arkadiusz Miśkiewicz  <arekm@maven.pl>

	* sysdeps/i386/dl-tlsdesc.S (_dl_tlsdesc_dynamic): Use LOAD_PIC_REG
	instead of doing things manually.

2008-11-26  Chris Steel  <chris.steel.lnx@googlemail.com>

	* posix/regex_internal.h (build_wcs_upper_buffer):
	Return type is reg_error_t.

2008-12-05  Ulrich Drepper  <drepper@redhat.com>

	* posix/globtest.sh: Use mktemp to create temporary file and
	directory.

	* sysdeps/unix/sysv/linux/bits/sched.h (__CPU_SET_S): Handle large
	sets correctly.
	(__CPU_CLR_S): Likewise.
	(__CPU_ISSET_S): Likewise.

2008-12-05  Joseph Myers  <joseph@codesourcery.com>
	    Ulrich Drepper  <drepper@redhat.com>
